deployment/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-app-deployment
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: hautran/simple_app:latest
        ports:
        - name: web
          containerPort: 5000
