deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app-svc
  namespace: apps
spec:
  selector:
    app: simple-app
  ports:
  - name: web
    port: 5000
    protocol: TCP
    targetPort: 5000
